@@ -16,8 +16,8 @@ class MultiKeywordScannerTest {
         multiKeywordScanner.loadKeywords(defaultKeywords);
         HitList hits = multiKeywordScanner.findAll(DEFAULT_DATA.getBytes());
         assertEquals(2, hits.size());
-        assertEquals(0, hits.get(0).getId());
-        assertEquals(16, hits.get(0).getOffset());
+        assertEquals(0, hits.getFirst().getId());
+        assertEquals(16, hits.getFirst().getOffset());
         assertEquals(1, hits.get(1).getId());
         assertEquals(41, hits.get(1).getOffset());
 
@@ -31,8 +31,8 @@ class MultiKeywordScannerTest {
         multiKeywordScanner.loadKeywords(defaultKeywords);
         HitList hits = multiKeywordScanner.findAll(DEFAULT_DATA.getBytes(), 28);
         assertEquals(1, hits.size());
-        assertEquals(1, hits.get(0).getId());
-        assertEquals(41, hits.get(0).getOffset());
+        assertEquals(1, hits.getFirst().getId());
+        assertEquals(41, hits.getFirst().getOffset());
 
         hits = multiKeywordScanner.findAll(null, 0);
         assertTrue(hits.isEmpty());
@@ -44,8 +44,8 @@ class MultiKeywordScannerTest {
         multiKeywordScanner.loadKeywords(defaultKeywords);
         HitList hits = multiKeywordScanner.findAll(DEFAULT_DATA.getBytes(), 0, 24);
         assertEquals(1, hits.size());
-        assertEquals(0, hits.get(0).getId());
-        assertEquals(16, hits.get(0).getOffset());
+        assertEquals(0, hits.getFirst().getId());
+        assertEquals(16, hits.getFirst().getOffset());
 
         hits = multiKeywordScanner.findAll(null, 0, 0);
         assertTrue(hits.isEmpty());
@@ -57,13 +57,13 @@ class MultiKeywordScannerTest {
         multiKeywordScanner.loadKeywords(defaultKeywords);
         HitList hits = multiKeywordScanner.findNext(DEFAULT_DATA.getBytes());
         assertEquals(1, hits.size());
-        assertEquals(0, hits.get(0).getId());
-        assertEquals(16, hits.get(0).getOffset());
+        assertEquals(0, hits.getFirst().getId());
+        assertEquals(16, hits.getFirst().getOffset());
 
         hits = multiKeywordScanner.findNext(DEFAULT_DATA.getBytes());
         assertEquals(1, hits.size());
-        assertEquals(1, hits.get(0).getId());
-        assertEquals(41, hits.get(0).getOffset());
+        assertEquals(1, hits.getFirst().getId());
+        assertEquals(41, hits.getFirst().getOffset());
 
         hits = multiKeywordScanner.findNext(null);
         assertTrue(hits.isEmpty());
@@ -75,8 +75,8 @@ class MultiKeywordScannerTest {
         multiKeywordScanner.loadKeywords(defaultKeywords);
         HitList hits = multiKeywordScanner.findNext(DEFAULT_DATA.getBytes(), 28);
         assertEquals(1, hits.size());
-        assertEquals(1, hits.get(0).getId());
-        assertEquals(41, hits.get(0).getOffset());
+        assertEquals(1, hits.getFirst().getId());
+        assertEquals(41, hits.getFirst().getOffset());
 
         hits = multiKeywordScanner.findNext(null, 28);
         assertTrue(hits.isEmpty());
@@ -88,8 +88,8 @@ class MultiKeywordScannerTest {
         multiKeywordScanner.loadKeywords(defaultKeywords);
         HitList hits = multiKeywordScanner.findNext(DEFAULT_DATA.getBytes(), 0, 24);
         assertEquals(1, hits.size());
-        assertEquals(0, hits.get(0).getId());
-        assertEquals(16, hits.get(0).getOffset());
+        assertEquals(0, hits.getFirst().getId());
+        assertEquals(16, hits.getFirst().getOffset());
 
         hits = multiKeywordScanner.findNext(null, 0, 0);
         assertTrue(hits.isEmpty());
@@ -107,8 +107,8 @@ class MultiKeywordScannerTest {
         HitList hits = multiKeywordScanner.findAll(DEFAULT_DATA.getBytes());
 
         assertEquals(3, hits.size());
-        assertEquals(0, hits.get(0).getId());
-        assertEquals(4, hits.get(0).getOffset());
+        assertEquals(0, hits.getFirst().getId());
+        assertEquals(4, hits.getFirst().getOffset());
         assertEquals(1, hits.get(1).getId());
         assertEquals(10, hits.get(1).getOffset());
         assertEquals(2, hits.get(2).getId());
